@@ -129,7 +129,6 @@ protected:
   void		doFriction(float dt, const float *oldVelocity, float *newVelocity);
   void		doForces(float dt, float* velocity, float& angVel);
   float		updateHandicap();
-  virtual int   getHandicapScoreBase() const;
   LocalShotPath**	shots;
   bool	  gettingSound;
   ServerLink*	server;
@@ -163,7 +162,6 @@ private:
   int		stuckFrameCount;
   bool		spawning;
   int		wingsFlapCount;
-  float		handicap;
   bool		left;
   bool		right;
   bool		up;
