@@ -48,7 +48,6 @@ class RobotPlayer : public LocalPlayer {
   private:
     void		doUpdate(float dt);
     void		doUpdateMotion(float dt);
-    virtual int	 getHandicapScoreBase() const;
     BzfRegion*		findRegion(const float p[2], float nearest[2]) const;
     float		getRegionExitPoint(
 				const float p1[2], const float p2[2],
